--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,9 @@
     </head>
     <body>
         <div id="button-area">
-            <div class="home-button" id="new-web"><div class="button-text">Create new web</div></div>
-            <div class="home-button" id="manage-webs"><div class="button-text">Manage web</div></div>
+            <div class="home-button" id="add-to-web"><div class="button-text">Add to web</div></div>
+            <div class="home-button" id="manage-webs"><div class="button-text">View web</div></div>
         </div>
+     <script src="scripts/popup.js"></script>
     </body>
 </html>
